--- a/index.html
+++ b/index.html
@@ -9,8 +9,26 @@
 <body>
     <div class="container">
         <p>Enter your text or URL</p>
-        <input type="text" placeholder="Text or URL">
-        <button>Generator QR Code</button>
+        <input type="text" placeholder="Text or URL" id="qrText">
+
+        <div id="imgbox">
+            <img src="" id="qrImage">
+        </div>
+
+        <button onclick="generateQR()" >Generator QR Code</button>
     </div>
+
+<script>
+
+    let imgBox = document.getElementById("imgBox");
+    let qrImage = document.getElementById("qrImage");
+    let qrText = document.getElementById("qrText");
+
+        function generateQR(){
+            qrImage.src ="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=" + qrText.value;
+            imgBox.classList.add("show-img");
+        }
+
+</script>
 </body>
 </html>
